Added the origin-trial for Translator API

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Translator API -->
+    <meta
+      http-equiv="origin-trial"
+      content="Alaj72HENIS8yQXAFfMkEJ6RoTQ17TmoeupvH+2Bj4lKrGVfj+wNS24m4I60sz+WDsRwcKVIMLwYiiDWDE0Xlg8AAABneyJvcmlnaW4iOiJodHRwczovL3RleHQtaG5nLXRyYW5zbGF0b3IubmV0bGlmeS5hcHA6NDQzIiwiZmVhdHVyZSI6IlRyYW5zbGF0aW9uQVBJIiwiZXhwaXJ5IjoxNzUzMTQyNDAwfQ==" />
+
     <title>AI Text Generator</title>
   </head>
   <body>
